Random on user and small improvements